# prefect-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.ext-services.yaml  docker-compose.yaml  makefile  prefect.yaml  pyproject.toml  requirements.prefect.txt  yoyo.ini.example
database/: __init__.py  connection.py
database/migrations/: 20241210_01_LQSl5.sql
flows/: __init__.py  basic_etl.py
log/: __init__.py  config.py
tasks/: __init__.py  load_data.py  transform_data.py
tests/: test_basic_etl.py  test_database.py
utils/: __init__.py  env_var.py  path_config.py
