[project]
name = "prefect-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "polars>=1.31.0",
    "prefect>=3.4.7",
    "psycog[binary]>=0.0.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.1",
    "s3fs>=2025.5.1",
    "yoyo-migrations>=9.0.0",
]
